// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.parse() allows zod v4 discriminated unions 1`] = `
"{
  "id": "chatcmpl-Cj6L9EhAnLN4VdmS3WOlztNifBTib",
  "object": "chat.completion",
  "created": 1764865167,
  "model": "gpt-4o-2024-08-06",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "content": "{\\"data\\":{\\"type\\":\\"a\\"}}",
        "refusal": null,
        "annotations": []
      },
      "logprobs": null,
      "finish_reason": "stop"
    }
  ],
  "usage": {
    "prompt_tokens": 115,
    "completion_tokens": 7,
    "total_tokens": 122,
    "prompt_tokens_details": {
      "cached_tokens": 0,
      "audio_tokens": 0
    },
    "completion_tokens_details": {
      "reasoning_tokens": 0,
      "audio_tokens": 0,
      "accepted_prediction_tokens": 0,
      "rejected_prediction_tokens": 0
    }
  },
  "service_tier": "default",
  "system_fingerprint": "fp_cbf1785567"
}
"
`;

exports[`.parse() allows zod v4 discriminated unions 3`] = `
"{
  "id": "chatcmpl-Cj6LAo9OYmTKdatrog7EX6Eza5sWm",
  "object": "chat.completion",
  "created": 1764865168,
  "model": "gpt-4o-2024-08-06",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "content": "{\\"data\\":{\\"type\\":\\"a\\"}}",
        "refusal": null,
        "annotations": []
      },
      "logprobs": null,
      "finish_reason": "stop"
    }
  ],
  "usage": {
    "prompt_tokens": 115,
    "completion_tokens": 7,
    "total_tokens": 122,
    "prompt_tokens_details": {
      "cached_tokens": 0,
      "audio_tokens": 0
    },
    "completion_tokens_details": {
      "reasoning_tokens": 0,
      "audio_tokens": 0,
      "accepted_prediction_tokens": 0,
      "rejected_prediction_tokens": 0
    }
  },
  "service_tier": "default",
  "system_fingerprint": "fp_cbf1785567"
}
"
`;
